name:               HsacnuLockControl
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple

executable          HsacnuLockControl
  main-is:          Main.hs
  add-source:       SexEnum.hs

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , text
                , yesod-core
                , shakespeare
                , blaze-html
                , persistent
                , persistent-sqlite
                , persistent-template
                , uri-encode
--                , lens

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N -Wunused-imports -Wname-shadowing
