name:               HsacnuLockControl
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple

executable          HsacnuLockControl
  main-is:          Main.hs
  hs-source-dirs:   .

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:    base
                  , text
                  , yesod-core
                  , yesod-persistent
                  , shakespeare
                  , blaze-html
                  , persistent
                  , persistent-sqlite
                  , persistent-template
                  , uri-encode
                  , aeson
                  , lens
                  , bytestring
                  , resourcet
                  , monad-logger
                  , http-conduit
                  , directory

  extensions:       OverloadedStrings
                  , QuasiQuotes
                  , TemplateHaskell
                  , TypeFamilies
                  , ScopedTypeVariables
                  , RankNTypes
                  , RecordWildCards
                  , DoAndIfThenElse
                  , FlexibleInstances
                  , GADTs
                  , EmptyDataDecls
                  , GeneralizedNewtypeDeriving

  ghc-options:      -threaded -O2 -rtsopts -with-rtsopts=-N
